--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,16 @@ document.getElementById('addForm').addEventListener('submit', async (ev)=>{
     setTimeout(()=>msg.textContent='',2000);
   }catch(e){msg.textContent='Error saving';}
 });
-
+async function deleteUser(id){
+  if(!confirm("Are you sure you want to delete this user?")) return;
+  try{
+    const res = await fetch(API_BASE + '/users/' + id, { method: 'DELETE' });
+    if(!res.ok) throw new Error('Delete failed');
+    await fetchUsers(); // Refresh the table
+  }catch(e){
+    alert('Error deleting user');
+  }
+}
 fetchUsers();
 </script>
 </body>
